--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 
 spring:
     datasource:
-      url: jdbc:mysql://localhost:5432/academia?useTimezone=true&serverTimezone=UTC&useLegacyDate
-      usename: root
+      url: jdbc:postgresql://localhost:5432/academia?useTimezone=true&serverTimezone=UTC&useLegacyDate
+      usename: Bruno
       password: Thaisebruno10
   jpa:
     show-sql: true
