--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,19 @@
-
+server.port: 8081
 spring:
     datasource:
-      url: jdbc:postgresql://localhost:5432/academia?useTimezone=true&serverTimezone=UTC&useLegacyDate
-      usename: Bruno
+      url: jdbc:mysql://localhost:3306/academia?useTimezone=true&serverTimezone=UTC&useLegacyDate
+      usename: root
       password: Thaisebruno10
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate.format_sql: true
+
+logging:
+  level:
+    org:
+      hibernate:
+        type: trace
 
